--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,13 +6,33 @@
 <button type="submit"> submit</button>
 </form> %>
 <%# <%= form_with url: "/create", method: :post do |form|%>
-Form 1
+<%# Form 1
 <%= form_with url: "/login", method: :post do |form| %>
-<%= form.label :query, "Enter name" %><br>
-  <%= form.text_field :query %><br>
-  <%= form.label :pass, "Enter Password"%><br>
-  <%=form.password_field :pass%><br>
-  <%= form.submit "Search" %>
+<%# <%= form.label :query, "Enter name" %><br>
+  <%# <%= form.text_field :query %><br>
+  <%# <%= form.label :pass, "Enter Password"%><br>
+  <%# <%=form.password_field :pass%><br>
+  <%# <%= form.submit "Search" %>
+<%# <%end%>    
+<%@article.each do |i|%>
+<a href='/show/<%=i.id%>'><br>
+<%=i.title%><br>
+<%=i.body%><br>
 <%end%>
+
+
+<h1>Articles</h1>
+
+<ul>
+  <% @article.each do |article| %>
+  
+    <li>
+      <%= link_to article.title, article %>
+      
+    </li>
+    
+  <% end %>
+</ul>
+<%= link_to "New Article", new_article_path %>
 
 
