--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -14,6 +14,11 @@
   <%# <%=form.password_field :pass%><br>
   <%# <%= form.submit "Search" %>
 <%# <%end%>    
+
+<%= link_to "New Article", new_article_path %>
+<%= link_to "Edit page", edit_article_path(@article)%>
+
+
 <%@article.each do |i|%>
 <a href='/show/<%=i.id%>'><br>
 <%=i.title%><br>
@@ -33,6 +38,6 @@
     
   <% end %>
 </ul>
-<%= link_to "New Article", new_article_path %>
+
 
 
